--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 		<title>jQuery UI Example Page</title>
-		<link type="text/css" href="css/Aristo/Aristo.css" rel="stylesheet" />	
+		<link type="text/css" href="css/Aristo-Dark/Aristo-Dark.css" rel="stylesheet" />	
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.6.1.min.js"></script>
 		<script type="text/javascript" src="http://code.jquery.com/ui/1.8.13/jquery-ui.min.js"></script>
 		<script type="text/javascript">
@@ -115,7 +115,7 @@
 		</script>
 		<style type="text/css">
 			/*demo page css*/
-			body{ font: 62.5% Cambria, Georgia, serif; margin: 50px;}
+			body{ background-color: #000; color: #fff; font: 62.5% Cambria, Georgia, serif; margin: 50px;}
 			.demoHeaders { margin-top: 2em; }
 			ul#icons { margin: 0; padding: 0;}
 			ul#icons li { margin: 2px; position: relative; padding: 4px 0; cursor: pointer; float: left; list-style: none; }
@@ -123,13 +123,15 @@
 			.columnbox { width: 500px; }
 			#eq span { height: 120px; float: left; margin: 15px; }
 			#countries { width: 300px; }
+			a, a:visited{color:#069;}
+			input{background-color: #3A3A3A;color: #FFFFFF;}
 		</style>	
 	</head>
 	<body class="ui-form">
 	
-		<h1>"Aristo" for jQuery UI!</h1>
+		<h1>"Aristo Dark" for jQuery UI!</h1>
 		<p style="font-size: 1.3em; line-height: 1.5; margin: 1em 0; width: 50%;">
-			This page demonstrates all available components of the jQuery UI port of "Aristo". jQuery and jQuery UI are pulled from the Google CDN. More information can be found at the original <a href="http://taitems.tumblr.com/post/482577430/introducing-aristo-a-jquery-ui-theme" target="_blank">blog post</a>.
+			This page demonstrates all available components of the clone of the jQuery UI port of "Aristo" - "Aristo Dark". jQuery and jQuery UI are pulled from the Google CDN. More information can be found at the original <a href="http://taitems.tumblr.com/post/482577430/introducing-aristo-a-jquery-ui-theme" target="_blank">blog post</a>.
 		</p>
 	
 		<!-- Autocomplete -->
